[package]
name = "browser-from-scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gfx = "*"
#gfx_text = "*"
#gfx_core = "0.9"
#gfx_device_gl = "0.16"
#gfx_window_glutin = "0.30.0"
#glutin = "0.20"
image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.11"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }